@@ -1,5 +1,5 @@
 /****************************************************************************
- Copyright (C) 2003 Al Riddoch <alriddoch@zepler.org>
+ Copyright (C) 2003-2006 Al Riddoch <alriddoch@zepler.org>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
