@@ -1,3 +1,7 @@
+2006-10-12  Al Riddoch  <alriddoch@zepler.org>
+
+	* skstream 0.3.6 released.
+
 2004-09-15  Al Riddoch  <alriddoch@zepler.org>
 
 	* skstream 0.3.5 released.
